<resources>
    <string name="app_name">MavynC</string>
    <string name="title_activity_login">Login</string>
    <string name="write_comment">write comment</string>
    <string name="prompt_email">Mobile no.</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Please check Mobile No."
    </string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_shipment">Map</string>
    <string name="title_activity_order">Book Shipment</string>
    <string name="Gr_detail1"><b> 1 <sub>\u2022 </sub> MAYVN WAY BILL : </b>This Way Bill to be regarded as a “Contract” Between Owners or dispatchers of the goods specified on the face of this Way Bill on the one hand and MAYVN hereinafter referred to as “MAYVN” (which terms shall include its Employees, Servants, Agents) on the other hand for the transportation of the said goods as booked from Booking station, specified on Way Bill to the Destination Station. This Way Bill is NOT NEGOTIABLE with any Bank/Finance Company/Financial Institution. All shipments are carried under The Carriers Act and at Owner’s risk unless &amp; until otherwise specifically agreed in writing by MAYVN by charging specific risk charges as mentioned on the front of this Way Bill. </string>
    <string name="Gr_detail2"> <b>2 <sub>\u2022 </sub>  MAYVN </b>: accepts all kinds of goods for transportation like Valuables, Commercial Documents, Literature, Sophisticated / High Technology Goods, Papers, Manuscripts, Securities of all kinds, Materials, Merchandise. Trade Samples and other items of a like nature but EXCLUDING all dangerous, explosives, hazardous, inflammable, combustible, contraband &amp; prohibited goods, bullion, gems, currency notes, bearer form negotiable instruments, animals, firearms or part thereof, ammunition, human remains, pornogtaphy and illegal narcotics/drugs etc. MAYVN has the right but not obligation to open and/or inspect any or all consignments. Every shipment shall be charged by its chargeable weight and not by actual weight. In case of volumetric material/goods/products, CFT will be applicable as per sole discretion of MAYVN.</string>
    <string name="Gr_detail3"><b>3 <sub>\u2022 </sub> CARRYING TERMS &amp; CONDITIONS : </b> MAYVN hereby agree to carry the goods from Booking Station (Consignor) to the Destination Station (Consignee) as specified on the face of the Way Bill on terms and conditions as set hereunder. All goods are acceptable for transportation by Road, Rail, Air or Sea at the sole discretion of the MAYVN to carry the goods through any media as it may deem fit. No Employee, except management of the MAYVN may in any manner, alter or modify the terms and conditions set on this Way Bill. The consignments are acceptable for transportation by MAYVN on Consignor\'s declaration that they do not contain any CONTRABAND or PROHIBITED or DANGEROUS or HAZARDOUS goods/items/materials and that they are properly Packed, Marked and Addressed so as to ensure safe transportation and delivery. The Consignor(s) acknowledge that the MAYVN is not a “Common Carrier” and that MAYVN at times shall have the right to refuse any goods offered for transportation without assigning any reason whatsoever. As the contents, nature quality, condition and value of the subject consignment are unknown to the MAYVN and the same has been accepted (as packed and declared by the owners) in good faith for transportation as indicated on the face of this Way Bill. Therefore MAYVN shall not, in any way, be kept responsible or liable to the Consignor and/or Consignee for any loss of damage to or non delivery, of the subject consignment, attributable to or caused by any improper and/or erroneous documentation or incorrect or false declaration and/or defective packing, marking or addressing of the subject consignment by Consignor(s), but the Consignor(s) shall be solely responsible and liable to the MAYVN for all the consequences of their improper actions as mentioned above. The Consignor/Consignee shall without any limitation, be solely liable to the MAYVN for all costs and expenses which would include OCTROI /OTHER TAXES/ LEVIES/IMPOST etc., in relation to the consignment and the Consignee.  </string>
    <string name="Gr_detail4"> <b>4 <sub>\u2022 </sub> INSURANCE : </b>In Transit as well as Warehouse Stock Insurance shall be organised by Consignor/Consignee, since we carry the consignment at Owners\' risk only. In case of any mishap/transit loss/shortages/damages/breakages/leakages etc, MAYVN shall issue you only a \" CERFIFICATE OF FACTS\"(COF) for lodging the insurance claim with your underwriter. MAYVN\'s legal liability is restricted to Rs. 1/per kg under the CarriersAct.  </string>
    <string name="Gr_detail5"> <b>5  <sub>\u2022 </sub> DEMURRAGE : </b>If material is not lifted by Consignor/Consignee within 15 days from receipt of the same by our delivery branch, then MAYVN shall charge demurrage charges @ 0.05 paise per kg per day for each additional day of storage beyond the said 15 days.  </string>
    <string name="Gr_detail6"> <b>6  <sub>\u2022 </sub> LIEN ON CONSIGNMENT :</b> MAYVN shall have a general lien on consignments in case the Consignee fails to pay the Freight Octroi, State and Local Taxes or other charges on the consignment due to any reasons. MAYVN may refuse to surrender possession of goods until all such charges are paid.  </string>
    <string name="Gr_detail7"> <b>7  <sub>\u2022 </sub> LIMITATION OF MAYVN LIABILITY :</b> The liability of MAYVN to the Consignor/Consignee for any loss or damage to or non delivery of the subject consignment shall be limited to Rs. 1,000/- (Rupees One Thousand Only) for non-commercial goods and documents unless otherwise agreed to and specifically declared on the face of this Way Bill.  </string>
    <string name="Gr_detail8"> <b>8  <sub>\u2022 </sub> LIABILITIES NOT ASSUMED BY MAYVN :</b> While the company will use its best endeavors to effect delivery of the subject consignment as agreed, MAYVN will not, in any circumstances assume any responsibility or liability for any Loss (direct or consequential, irrespective of the amount involved) alleged to have been sustained by the Consignor/Consignee arising out of or caused by delay in the pickup, transportation and delivery of the subject Consignment due to (a) Act of God, Force Majeure, natural calamities , floods or convulsions of nature, any variations in temperature, weather conditions etc., fire and explosion, accidents to the carrying vehicles, the action of terrorists, militants or activists or by persons acting from a political motive or caused by or resulting from strikes, lockouts, labour disturbances, riots or civil commotions, etc. Provided MAYVN has exercised reasonable care and precautions in the transportation of the subject consignment. (b)Any act, fault, omission on the part of the Consignor/Consignee or any other interested third party, howsoever arising. (c) Government officials, in discharge of their official duties such as customs/taxation/octroi inspection etc. (d) Electric or magnetic injury, erasure or other such damage to photographic or Electronic Pictures, Images or recordings in any form.(e) The nature of the consignment or any defect, characteristics, inherent vice, thereof.  </string>
    <string name="Gr_detail9"><b> 9  <sub>\u2022 </sub> CLAIM FOR LOSS OR DAMAGE TO THE SUBJECT CONSIGNMENT : </b>No claim shall be entertained by the MAYVN until and unless all its Transportation charges etc., or any outstanding charges are paid by the CONSIGNOR OR CONSIGNEE as the case may be and if any claim arises against subject consignment it would be brought into the notice of the Company in writing within 7 days from the date of booking at the Booking Station. Any such claim will not be entertained by the Company after expiry of 10 days from the date of Booking.  </string>
    <string name="Gr_detail10"><b>10 <sub>\u2022 </sub> </b> This contract shall not enure to the benefit of any of the General Insurers operating in India.   </string>
    <string name="Gr_detail11"><b>11 <sub>\u2022 </sub> </b> No suit shall lie against MAYVN in respect of or in relation to the subject consignment after expiry of 3 months from the date of the Booking.  </string>
    <string name="Gr_detail12"> <b>12 <sub>\u2022 </sub> JURISDICTION :</b> The competent Court in the State of DELHI alone shall have jurisdiction in respect of all claims and/or matters pertaining to the subject Consignment or arising out of this contract.  </string>
</resources>