<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false"
    >


    <!--   Parent Layout With Vertical Orientation -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <TextView
            android:layout_height="50dp"
            android:layout_width="fill_parent"
            />

        <TextView
            android:layout_height="60dp"
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:textColor="#616161"
            android:text="TERMS &amp; CONDITIONS OF CARRIER"
            android:elevation="3dp"
            android:textSize="18sp"
            android:background="#f5f5f5"
            android:gravity="center_vertical|center_horizontal"

            />


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:textColor="#616161"
            android:text="@string/Gr_detail1"
            android:textStyle="normal"
            android:textAlignment="gravity"
            android:textSize="14sp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"

            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:textColor="#616161"
            android:text="@string/Gr_detail2"
            android:textStyle="normal"
            android:textAlignment="gravity"
            android:textSize="14sp"
            android:background="@color/white"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:textColor="#616161"
            android:text="@string/Gr_detail3"
            android:textStyle="normal"
            android:textAlignment="gravity"
            android:textSize="14sp"
            android:background="@color/white"
            android:gravity="center_vertical"
            />
       <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_margin="15dp"
            android:textColor="#616161"
            android:text="@string/Gr_detail4"
            android:textStyle="normal"
            android:textAlignment="gravity"
            android:textSize="14sp"
            android:background="@color/white"
            android:gravity="center_vertical"
            />

        <TextView
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:layout_margin="15dp"
              android:textColor="#616161"
              android:text="@string/Gr_detail5"
              android:textStyle="normal"
              android:textAlignment="gravity"
              android:textSize="14sp"
              android:background="@color/white"
              android:gravity="center_vertical"
              />

           <TextView
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"
          android:layout_margin="15dp"
          android:textColor="#616161"
          android:text="@string/Gr_detail6"
          android:textStyle="normal"
          android:textAlignment="gravity"
          android:textSize="14sp"
          android:background="@color/white"
          android:gravity="center_vertical"
          />
         <TextView
               android:layout_height="wrap_content"
               android:layout_width="fill_parent"
               android:layout_margin="15dp"
               android:textColor="#616161"
               android:text="@string/Gr_detail7"
               android:textStyle="normal"
               android:textAlignment="gravity"
               android:textSize="14sp"
               android:background="@color/white"
               android:gravity="center_vertical"
               />

         <TextView
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:layout_margin="15dp"
              android:textColor="#616161"
              android:text="@string/Gr_detail8"
              android:textStyle="normal"
              android:textAlignment="gravity"
              android:textSize="14sp"
              android:background="@color/white"
              android:gravity="center_vertical"
              />


           <TextView
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:layout_margin="15dp"
           android:textColor="#616161"
           android:text="@string/Gr_detail9"
           android:textStyle="normal"
           android:textAlignment="gravity"
           android:textSize="14sp"
           android:background="@color/white"
           android:gravity="center_vertical"
           />
       <TextView
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:layout_margin="15dp"
           android:textColor="#616161"
           android:text="@string/Gr_detail10"
           android:textStyle="normal"
           android:textAlignment="gravity"
           android:textSize="14sp"
           android:background="@color/white"
           android:gravity="center_vertical"
           />

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:layout_margin="15dp"
           android:textColor="#616161"
           android:text="@string/Gr_detail11"
           android:textStyle="normal"
           android:textAlignment="gravity"
           android:textSize="14sp"
           android:background="@color/white"
           android:gravity="center_vertical"
           />


       <TextView
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:layout_margin="15dp"
           android:textColor="#616161"
           android:text="@string/Gr_detail12"
           android:textStyle="normal"
           android:textAlignment="gravity"
           android:textSize="14sp"
           android:background="@color/white"
           android:gravity="center_vertical"
           />



    </LinearLayout>





</ScrollView>
