<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
  >


    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <AutoCompleteTextView
                    android:id="@+id/mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:textColorHint="#d84c00"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusableInTouchMode="true"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:textColorHint="#d84c00"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:focusableInTouchMode="true"
                  />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/sign_in_button"
                android:backgroundTint="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="normal"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
               />

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                android:layout_gravity="center_horizontal"/>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:weightSum="100"
                android:visibility="invisible">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Terms &amp; Conditions"
                    android:layout_weight="49.5"
                    android:gravity="right|center_horizontal"
                    android:layout_marginRight="5dp"
                    android:clickable="true"
                    android:id="@+id/login_tc"
                    android:visibility="invisible"/>

                <TextView
                    android:layout_width="1dp"
                    android:layout_height="10dp"
                    android:background="#9e9e9e"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Forget Password"
                    android:layout_weight="49.5"
                    android:gravity="left|center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:id="@+id/forgetpass"/>



            </LinearLayout>-->




        </LinearLayout>



    </ScrollView>


    <!-- Login progress -->

</LinearLayout>
